test/modules/deitz/test_module_access2.good
test_module_access2.chpl:1: In module 'OuterModule':
test_module_access2.chpl:13: error: cannot find 'x' in module 'M'
