test/modules/deitz/test_module_access2.chpl
module OuterModule {
  module N {
    var x = 1;
  }

  module M {
    use N;
    var y = 2;
  }

  use M;

  writeln((M.x, M.y));
}
